Add partial-word searching, add turbo-frames for SPA-like feel

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -740,3 +740,15 @@ tr.has-debt {
     }
   }
 }
+
+turbo-frame {
+  transition: opacity 500ms ease-out;
+}
+
+turbo-frame[busy] {
+  opacity: 0.35;
+
+  &::before {
+    display: none;
+  }
+}
