--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -3,18 +3,19 @@
 = render "_shared/nav-index", model: @sales
 
 main.wide
-  .search-navigation
-    = render partial: "_shared/search-form", locals: {path: sales_path}
+  turbo-frame id="sales-index"
+    .search-navigation
+      = render partial: "_shared/search-form", locals: {path: sales_path}
+      = paginate @sales
+    table role="grid" data-controller="table"
+      thead
+        tr
+          th Woo ID
+          th Customer and Products
+          th Date
+          th Status
+          th.right Price
+          th.right Actions
+      tbody
+        = render @sales
     = paginate @sales
-  table role="grid" data-controller="table"
-    thead
-      tr
-        th Woo ID
-        th Customer
-        th Date
-        th Status
-        th.right Price
-        th.right Actions
-    tbody
-      = render @sales
-  = paginate @sales
