Disable turbo on edit links so they work properly

--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -13,6 +13,6 @@ tr.hoverable id="#{dom_id product}" data-action="click->table#goTo" data-table-u
   td = product.woo_id
   - if action_name != "show" 
     td.actions
-      = link_to edit_product_path(product)
+      = link_to edit_product_path(product), data: {turbo: false}
         i.icn ✏️
         | Edit
