--- a/app/views/purchases/_purchase.html.slim
+++ b/app/views/purchases/_purchase.html.slim
@@ -20,6 +20,6 @@ tr.hoverable id="#{dom_id purchase}" data-action="click->table#goTo" data-table-
 
   - if action_name != "show"
     td.actions
-      = link_to edit_purchase_path(purchase)
+      = link_to edit_purchase_path(purchase), data: {turbo: false}
         i.icn ✏️
         | Edit
