Make product images slightly bigger

--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -38,7 +38,7 @@ main.wide.flex.flex-col.gap.w-pd
       .title Color
       p = format_relation(@product.colors, "value")
 
-    .card
+    .card.shrink-2
       .title ID
       p = @product.id
       .title Supplier
