Impove Stimulus and Turbolinks work at products page

--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,7 +1,7 @@
 tr.hoverable id="#{dom_id product}" data-action="click->table#goTo" data-table-url-param=product_path(product)
   td.text-center
     - if product.images.present?
-      = render "preloadable_img", src: url_for(product.images.first.representation(:thumb)), class_names: "zoomable", width: 100
+      = render "preloadable_img", src: product_thumb_url(product), class_names: "zoomable", width: 100
     - else
       i.icn 🧌
   td
