--- a/app/assets/stylesheets/components/preloadable_img.css
+++ b/app/assets/stylesheets/components/preloadable_img.css
@@ -2,40 +2,47 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-.preloadable-img__skeleton,
-.preloadable-img__img {
-  display: none;
-  opacity: 0;
-  transition: all var(--transition);
-  border-radius: 2px;
+  i.icn {
+    position: absolute;
 
-  &.visible {
-    display: block;
-    opacity: 1;
+    &.hidden {
+      display: none;
+    }
   }
 }
 
-.preloadable-img__skeleton {
-  animation-duration: 1.4s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-fill-mode: forwards;
-  animation-name: shimmer;
-  background: #f6f7f8;
-  background: linear-gradient(
-    to right,
-    hsl(0 0% 90% / 1) 10%,
-    hsl(0 0% 95% / 1) 25%,
-    hsl(0 0% 90% / 1) 35%
-  );
-  background-size: 1000px 640px;
-}
-
 .preloadable-img__img {
-  object-fit: cover;
+  display: block;
+  transition: all var(--transition);
+  border-radius: 2px;
+  min-height: fit-content;
+  max-height: 100%;
+  object-fit: contain;
   object-position: center;
+
+  &.loading {
+    animation-duration: 1.4s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-name: shimmer;
+    background: #f6f7f8;
+    background: linear-gradient(
+      to right,
+      hsl(0 0% 90% / 1) 10%,
+      hsl(0 0% 95% / 1) 25%,
+      hsl(0 0% 90% / 1) 35%
+    );
+    background-size: 1000px 640px;
+    width: 100%;
+    height: 100%;
+  }
+
+  &.not-found {
+    width: 100%;
+    height: 100%;
+  }
 
   &.zoomable {
     transition: all 150ms ease-out;
@@ -47,5 +54,9 @@
     backdrop-filter: blur(3px);
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
     background-color: rgba(255, 255, 255, 0.45);
+  }
+
+  &.hidden {
+    display: none;
   }
 }
