--- a/app/views/products/_preloadable_img.html.slim
+++ b/app/views/products/_preloadable_img.html.slim
@@ -1,5 +1,10 @@
 - data = {} if local_assigns[:data].nil?
+- style = "" if local_assigns[:width].nil?
+- style = "height: #{local_assigns[:width] * 1.2}px; min-width: #{local_assigns[:width]}px; max-width: #{local_assigns[:width]}px;" if local_assigns[:width].present?
 
 .preloadable-img__container data-controller="preloadable-img" data-preloadable-img-src-value=src
-  = image_tag "", class: "preloadable-img__img #{class_names}", style: "width: #{width}px;", data: {"preloadable-img-target":"img", **data}
-  .preloadable-img__skeleton data-preloadable-img-target="skeleton" style="width: #{width}px; height: #{width * 1.2}px;"
+  - if src != nil
+    = image_tag "", class: "preloadable-img__img loading #{class_names}", data: {"preloadable-img-target":"img", **data}, style:
+  - else
+      = image_tag "", class: "preloadable-img__img hidden #{class_names}", data: {"preloadable-img-target":"img", **data}, src: "", style:
+      i#preloader-img__placeholder.icn 👻
