Add 'not found' placeholder for search

--- a/app/assets/stylesheets/misc.css
+++ b/app/assets/stylesheets/misc.css
@@ -3,6 +3,10 @@ i.icn {
   font-family: "Noto Emo";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  &.xxl {
+    font-size: 10rem;
+  }
 }
 
 .icn.is-link {
