--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -3,17 +3,19 @@
 = render "_shared/nav-index", model: @products
 
 main.wide
-  / turbo-frame id="products-index"
   .search-navigation
     = render partial: "_shared/search-form", locals: {path: products_path}
     = paginate @products
-  table role="grid" data-controller="table"
-    thead
-      tr
-        th Image
-        th Full name
-        th Woo ID
-        th Actions
-    tbody
-      = render @products
-  = paginate @products
+  - if @products.present? 
+    table role="grid" data-controller="table"
+      thead
+        tr
+          th Image
+          th Full name
+          th Woo ID
+          th Actions
+      tbody
+        = render @products
+    = paginate @products
+  - else 
+    = render "_shared/search-results-empty"
