--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -7,17 +7,20 @@ main.wide data-controller="table"
     .search-navigation
       = render partial: "_shared/search-form", locals: {path: purchases_path}
       = paginate @purchases
-    table(role="grid")
-      thead
-        tr
-          th ID
-          th Product
-          th Qty
-          th.right Price, $
-          th.right Total, $
-          th.right Debt, $
-          th Supplier
-          th Actions
-      tbody
-        = render @purchases, cache: true
-    = paginate @purchases
+    - if @purchases.present?
+      table(role="grid")
+        thead
+          tr
+            th ID
+            th Product
+            th Qty
+            th.right Price, $
+            th.right Total, $
+            th.right Debt, $
+            th Supplier
+            th Actions
+        tbody
+          = render @purchases, cache: true
+      = paginate @purchases
+    - else 
+      = render "_shared/search-results-empty"
