--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -7,15 +7,18 @@ main.wide
     .search-navigation
       = render partial: "_shared/search-form", locals: {path: sales_path}
       = paginate @sales
-    table role="grid" data-controller="table"
-      thead
-        tr
-          th Woo ID
-          th Customer and Products
-          th Date
-          th Status
-          th.right Price
-          th.right Actions
-      tbody
-        = render @sales
-    = paginate @sales
+    - if @sales.present?
+      table role="grid" data-controller="table"
+        thead
+          tr
+            th Woo ID
+            th Customer and Products
+            th Date
+            th Status
+            th.right Price
+            th.right Actions
+        tbody
+          = render @sales
+      = paginate @sales
+    - else 
+      = render "_shared/search-results-empty"
