--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -1,9 +1,16 @@
 = render "_shared/notice"
 
 = render "_shared/nav-show", model: @purchase, custom_heading: true
-  h1
-    = @purchase.product.full_title
-    i.icn.is-link = link_to "🔗", @purchase.product
+  - if @purchase.variation
+    hgroup
+      h1
+        = @purchase.product.full_title
+        i.icn.is-link = link_to "🔗", @purchase.product
+      h2 = @purchase.variation.title
+  - else
+    h1
+      = @purchase.product.full_title
+      i.icn.is-link = link_to "🔗", @purchase.product
 
 main.wide.flex.flex-col.gap.w-pd
   .cards
