--- a/app/views/purchases/_form.html.slim
+++ b/app/views/purchases/_form.html.slim
@@ -9,7 +9,7 @@
     = form.collection_select :product_id, Product.all, :id, :full_title, { class: "select" }, data: { controller: "slim-select", action: "change->purchase-variation#change" }
 
     .stimulus#purchase-variation-select data-purchase-variation-target="select"
-      - if purchase.product.variations.present?
+      - if purchase.product&.variations.present?
         = form.label :variation
         = form.collection_select :variation_id, purchase.product.variations, :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
 
