Fix bugs with debts, purchases, search, and improve views

--- a/app/views/dashboard/debts.html.slim
+++ b/app/views/dashboard/debts.html.slim
@@ -21,16 +21,22 @@ main.wide.no-bd.flex.justify-between.flex-col.gap
               tr.hoverable(
                 data-action="click->table#goTo"
                 data-table-url-param=product_path(product.id)
-                data-table-id-param=(product.id)
+                data-table-id-param=(product.sale_variation_id || product.id)
               )
                 td = product.full_title
                 - if product.sale_variation_id.present?
                   td = product.variation_name
                 - else
                   td
-                td = product.sold
-                td = product.purchased
-                td = product.debt
+                td = product.sold_amount.to_i
+                - if product.sale_variation_id.present?
+                  td = product.purchased_variations_amount.to_i
+                - else
+                  td = product.purchased_amount.to_i
+                - if product.sale_variation_id.present?
+                  td = product.variations_debt.to_i
+                - else
+                  td = product.debt.to_i
       = paginate @debts
     - else 
       = render "_shared/search-results-empty"
