--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -81,12 +81,13 @@ main.wide.flex.flex-col.gap.w-pd
           span = @active_sales.size
         table role="grid" data-controller="table"
           thead
+            th Status
             th Customer
             th Email
             th Country
             th Date
-            th Status
-            th Variation?
+            - if @product.variations.any?
+              th Variation?
             th.right Price, $
             th Qty
           tbody
@@ -96,15 +97,16 @@ main.wide.flex.flex-col.gap.w-pd
                 data-action="click->table#goTo"
                 data-table-url-param=sale_path(ps.sale)
               )
+                td = ps.sale.status.capitalize
                 td = ps.sale.customer.full_name
                 td = ps.sale.customer.email
                 td = ps.sale.country
                 td.no-wrap = format_date ps.sale.woo_created_at.presence || ps.created_at
-                td = ps.sale.status
-                - if ps.variation.present?
-                  td = ps.variation.which&.value
-                - else
-                  td -
+                - if @product.variations.any?
+                  - if ps.variation.present?
+                    td = ps.variation.which&.value
+                  - else
+                    td -
                 td.right.mono = format_money ps.price
                 td = ps.qty
 
@@ -116,14 +118,14 @@ main.wide.flex.flex-col.gap.w-pd
           span = @complete_sales.size
         table role="grid" data-controller="table"
           thead
+            th Customer
             th Email
+            th Country
             th Date
+            - if @product.variations.any?
+              th Variation?
             th.right Price, $
             th Qty
-            th Customer
-            th Country
-            th City
-            th Variation?
           tbody
             - @complete_sales.each_with_index do |ps, idx|
               tr(
@@ -131,17 +133,17 @@ main.wide.flex.flex-col.gap.w-pd
                 data-action="click->table#goTo"
                 data-table-url-param=sale_path(ps.sale)
               )
+                td = ps.sale.customer.full_name
                 td = ps.sale.customer.email
+                td = ps.sale.country
                 td.no-wrap = format_date ps.sale.woo_created_at.presence || ps.created_at
+                - if @product.variations.any?
+                  - if ps.variation.present?
+                    td = ps.variation.which&.value
+                  - else
+                    td -
                 td.right.mono = format_money ps.price
                 td = ps.qty
-                td = ps.sale.customer.full_name
-                td = ps.sale.country
-                td = ps.sale.city
-                - if ps.variation.present?
-                  td = ps.variation.which&.value
-                - else
-                  td -
 
   - if @product.purchases.present?
     .table-cards-group
