--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -18,7 +18,7 @@ main.wide.no-bd.flex.justify-between.flex-col.gap
           - if product.sale_variation_id.present?
             tr.hoverable(
               data-action="click->table#goTo"
-              data-table-url-param=product_path(product.id)
+              data-table-url-param=product_path(product.slug)
               data-table-id-param=product.sale_variation_id
             )
               td = product.full_title
@@ -27,7 +27,7 @@ main.wide.no-bd.flex.justify-between.flex-col.gap
           - else
             tr.hoverable(
               data-action="click->table#goTo"
-              data-table-url-param=product_path(product.id)
+              data-table-url-param=product_path(product.slug)
               data-table-id-param=product.id
             )
               td = product.full_title
