--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -6,7 +6,10 @@
       h1
         = @purchase.product.full_title
         i.icn.is-link = link_to "🔗", @purchase.product
-      h2 = @purchase.variation.title
+      h2
+        = @purchase.variation.which.model_name
+        | : 
+        = @purchase.variation.which.value
   - else
     h1
       = @purchase.product.full_title
