--- a/app/views/versions/new.html.slim
+++ b/app/views/versions/new.html.slim
@@ -1,4 +1,4 @@
-= link_to "Back to versions", versions_path
-h1 New version
+= render "_shared/nav-new", model: @version
+
 main
   = render "form", version: @version
