--- a/app/views/shapes/new.html.slim
+++ b/app/views/shapes/new.html.slim
@@ -1,4 +1,4 @@
-= link_to "Back to shapes", shapes_path
-h1 New shape
+= render "_shared/nav-new", model: @shape
+
 main
   = render "form", shape: @shape
